src/test/resources/invalidPrograms/argc_mismatch.frj
class A {
	method Int hello(Int a, mut Std std) =
		mut Std s = std.print("Hello"),
		a;
}

main = new A().hello();
